--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 	<link rel="stylesheet" href="css/all.min.css">
 </head>
 <body>
+	<audio autoplay>
+    <source src="music/我是真的爱上你-王杰.mp3"/>
+</audio> 
 	<div class="flowtime">
     <video controls="true" autoplay="true" name="media" loop="true" hidden="true"> <source src=" https://m701.music.126.net/20201113171041/0fd603d0d61f3bde30340424a01355be/jdyyaac/0452/5353/5153/381e90f250d90b859801f905d918fd16.m4a" type="audio/mpeg"></video>
     <embed src="" autostart="true" loop="true" hidden="true"></embed>
